# flask-server

./: CONTRIBUTING.md  README.md
.github/: repository.config  take-snapshot.mjs
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-bug.yml
.github/workflows/: check-pr-title.yml  codeql-analysis.yml  label-pr.yml  update-preview.yml
server/: alembic.ini  pyproject.toml
server/alembic/versions/: 20ce0437b6f8_create_user_tables.py  45d4ae8e4ee9_create_user_groups.py  cf3ae7004153_create_user_profile.py  f66a8cab5ab5_create_country_table.py
server/app/: __init__.py  __main__.py  config.py
server/app/decorators/: __init__.py
server/app/dto/: credentials.py  user_creation.py
server/app/models/: __init__.py  country.py  group.py  message.py  user.py
server/app/routes/: __init__.py  auth.py  error.py  groups.py  health.py  mails.py  users.py
server/app/static/css/: layout.css  summary_mail.css
server/app/tests/dto/: test_users.py
server/src/: __init__.py
server/src/models/: country.py  group.py  message.py  user.py
server/src/routes/: __init__.py  auth.py  errors.py  health.py  users.py
server/tests/: conftest.py
server/tests/dto/: test_users.py
server/tests/routes/: test_auth.py  test_groups.py
