[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = "A flask server"
authors = ["Srija Adhya <srijaadhya.11sc.2020@gmail.com>"]
readme = "../README.md"
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-httpauth = "^4.8.0"
jwt = "^1.3.1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
